arrtime 업데이트 추가 및 api 호출 시간 증가